--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -3,12 +3,9 @@ CXXFLAGS = -std=c++11 -O3 -march=native -fopenmp
 
 CPPTARGETS = $(basename $(wildcard *.cpp))
 
-all : pingpong int_ring
+all: mpi_scan pingpong int_ring
 
-pingpong: pingpong.cpp
-	$(CXX) $(CXXFLAGS) $< $(LIBS) -o $@
-
-int_ring: int_ring.cpp
+%: %.cpp
 	$(CXX) $(CXXFLAGS) $< $(LIBS) -o $@
 
 clean:
